--- a/slides/chapter7_02_regression-with-categorical-var.qmd
+++ b/slides/chapter7_02_regression-with-categorical-var.qmd
@@ -15,7 +15,7 @@ format:
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "images/chapter8-02/",
+knitr::opts_chunk$set(#fig.path = "images/chapter8-02/",
                       fig.align = "center",
                       fig.width = 10, 
                       fig.height = 4,
