--- a/slides/chapter7_03_interaction.Rmd
+++ b/slides/chapter7_03_interaction.Rmd
@@ -2,12 +2,7 @@
 title: Simple linear regression
 output: 
   teachr::teachr_slides
-# need to run following from console to work
-# might be issue with render in RStudio daily build
-# rmarkdown::render("chapter8_03_interaction.Rmd")
-# Need to copy over the images as well
-# images/chapter7
-## fs::dir_copy("images/", "../static/chapter8/images/", overwrite = TRUE)
+chapter: 7
 ---
 
 
