chapter 7 slide 2 done

--- a/slides/chapter7_02_multiple-linear-regression.qmd
+++ b/slides/chapter7_02_multiple-linear-regression.qmd
@@ -22,26 +22,15 @@ knitr::opts_chunk$set(fig.align = "center",
                       cache = FALSE,
                       echo = TRUE)
 library(tidyverse)
+theme_set(theme(text = element_text(size = 24)))
 ```
 
 
-## Assumptions for linear models
-
-For $i = 1, ..., n$, 
-
-
-$$y_i = \beta_0 + \beta_1 x_{i1} + ... +  \beta_kx_{ik} + e_i$$
-where we assume <span style="color:red">$e_i$ are i.i.d. $NID(0, \sigma^2)$</span>.
-
-Notes:
-
-
-* i.i.d. =  independent and identically distributed 
 
 
 
 
----
+
 
 ## Illustrative data: marketing 
 
@@ -64,11 +53,105 @@ Notes:
 
 ---
 
-## Model diagnostics for linear models
+## Pair plots
 
-1. Plot scatter plot between pairs of continuous variables:
-
-```{r ggpairs, message = FALSE, warning = FALSE}
+```{r ggpairs, message = FALSE, warning = FALSE, fig.width = 12, fig.height = 6}
 GGally::ggpairs(marketing)
 ```
 
+---
+
+
+## Plot of correlation matrix
+
+```{r ggcorr, message = FALSE, warning = FALSE}
+GGally::ggcorr(marketing)
+```
+
+Notes: 
+
+```{r}
+cor(marketing)
+```
+
+---
+
+## Multiple linear regression
+
+A natural extension of simple linear regression is to consider models with more than one predictor:
+
+
+$$y_i = \beta_0 + \beta_1 x_{i1} + ... +  \beta_kx_{ik} + e_i$$
+for $i = 1, ..., n$, where we assume <span style="color:red">$e_i$ are i.i.d. $NID(0, \sigma^2)$</span>.  
+
+Notes:
+
+
+* i.i.d. =  independent and identically distributed 
+
+---
+
+## Multiple linear regression with R
+
+To fit 
+
+$$\texttt{sales}_i = \beta_0 + \beta_1 \texttt{youtube}_i + \beta_2 \texttt{facebook}_i + \beta_3 \texttt{newspaper}_i + e_i$$
+
+```{r}
+fit <- lm(sales ~ youtube + facebook + newspaper, data = marketing)
+coef(fit)
+```
+
+
+<aside class="notes">
+
+* So the fitted model is approximately,
+
+$$\widehat{\texttt{sales}} = 3.53 + 0.0458 \times \texttt{youtube} + 0.189 \times \texttt{facebook} - 0.001 \times \texttt{newspaper}.$$
+
+</aside>
+---
+
+## Residual plot
+
+
+```{r res-plot, echo = FALSE, fig.width = 12, fig.height = 8}
+library(tidyverse)
+library(patchwork)
+
+g1 <- marketing %>% 
+  mutate(.resid = residuals(fit),
+         .fitted = fitted(fit)) %>% 
+  ggplot(aes(youtube, .resid)) + 
+  geom_point() +
+  geom_hline(yintercept = 0)
+g2 <- g1 + aes(x = facebook)
+g3 <- g1 + aes(x = newspaper)
+g4 <- g1 + aes(x = .fitted)
+
+(g1 + g2) / (g3 + g4) + plot_annotation(tag_levels = "A")
+``` 
+
+
+Notes:
+
+* The code to produce these plots is:
+
+```{r res-plot, eval = FALSE}
+```
+
+
+* A residual plot usually refers to the scatterplot of residuals against an independent variable. 
+* A residual plot may sometimes refer to the scatterplot of residuals against the fitted values. 
+* The residual may be substituted with standardised or studentized residuals.
+* Recall you assume that $e_i$ is i.i.d. $N(0, \sigma^2)$ -- under this assumption, **there should be no visible pattern in the residual plot**.
+* If there are visible trends in the residual plot, this suggests that there are some other variable not accounted for in modelling the response. 
+* Here, we see a "ribbon" shape for plots A and B -- this suggests that any inferences drawn from the fitted model may not be appropriate.
+
+---
+
+## Summary 
+
+* You can extend a simple linear regression by adding more covariates in the model in the symbolic formula of `lm`.
+* Remember to do some model diagnostics, e.g. using the residual plots.
+* A pattern in the residual suggests that the model may be inappropriate to use for inferences.
