compile other slides for ch 7

--- a/slides/chapter7_05_visualisation.qmd
+++ b/slides/chapter7_05_visualisation.qmd
@@ -22,8 +22,17 @@ knitr::opts_chunk$set(fig.align = "center",
                       cache = FALSE,
                       echo = TRUE)
 library(tidyverse)
-library(broom)
-library(grid)
-library(patchwork)
 ```
+
+
+## Plotting models via `geom_smooth()`
+
+* You can easily plot the fitted model for a bivariate data using `geom_smooth()` from `ggplot2`. 
+
+```{r}
+ggplot(cars, aes(dist, speed)) + 
+  geom_point() +
+  geom_smooth(method = lm, se = FALSE, formula = y ~ x)
+```
+
 
