--- a/slides/chapter2_05_matrices.Rmd
+++ b/slides/chapter2_05_matrices.Rmd
@@ -22,7 +22,7 @@ chapter: 2
 A **matrix** is a rectangular array of numbers written between
 rectangular brackets (or large parentheses). For example, matrix `A` is defined as follow:
 
-\[A = \begin{bmatrix}4&3&2 \\\\ 7&4&2 \\\\ 6&3&4 \\\\ 3&0&0 \\\\ 2&-2&-3 \end{bmatrix}\]
+$$A = \begin{bmatrix}4&3&2 \\\\ 7&4&2 \\\\ 6&3&4 \\\\ 3&0&0 \\\\ 2&-2&-3 \end{bmatrix}$$
 
 Note:
 
