--- a/slides/chapter_1_02_RStudio_basics.Rmd
+++ b/slides/chapter_1_02_RStudio_basics.Rmd
@@ -25,7 +25,7 @@ options("knitr.graphics.error" = FALSE)
 ### What does RStudo looks like? 
 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_interface_1.png")
 ```
 
@@ -42,7 +42,7 @@ The window on the bottom right has a few different sessions including `Files`, `
 ### Adding a new R Script 
 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_Add_script.png")
 ```
 
@@ -55,7 +55,7 @@ To make your work reproducible, you can write and store all your code in a `R Sc
 ### R Script 
 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_rscript_1.png")
 ```
 
@@ -83,7 +83,7 @@ After you run each line of the code, you can see the messages in your `Console`.
 
 ### R packages installation and loading 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_package.png")
 ```
 
@@ -99,7 +99,7 @@ If you are not sure whether you have the packages or not, you could also type in
 There are two ways to install packages. 
 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_Install_pkg.png")
 ```
 
@@ -118,7 +118,7 @@ Alternately, you can run `install.pakcages("")` with the package name inside `""
 ### Customised your RStudio - Changing Global Options 
 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_tools.png")
 ```
 
@@ -146,7 +146,7 @@ Note: If you are having difficulty downloading packages in your country, you cou
 ### Customised your RStudio - Changing Global Options 
 
 
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE}
 knitr::include_graphics("chapter1-02/RStudio_apprenve.png")
 ```
 
