--- a/slides/chapter_1_02_RStudio_basics.Rmd
+++ b/slides/chapter_1_02_RStudio_basics.Rmd
@@ -7,7 +7,7 @@ chapter: 1
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.path = "chapter1-02/",
+knitr::opts_chunk$set(fig.path = "chapter1/chapter1-02/",
                       fig.align = "center",
                       fig.width = 2, 
                       fig.height = 2,
@@ -26,7 +26,7 @@ options("knitr.graphics.error" = FALSE)
 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_interface_1.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_interface_1.png")
 ```
 
 Note: Once you open RStudio, you should see this interface. 
@@ -43,7 +43,7 @@ The window on the bottom right has a few different sessions including `Files`, `
 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_Add_script.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_Add_script.png")
 ```
 
 Note: You can run r code in the `Console` but once you close RStudio, you loss your code in `Console`. 
@@ -56,7 +56,7 @@ To make your work reproducible, you can write and store all your code in a `R Sc
 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_rscript_1.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_rscript_1.png")
 ```
 
 Note: In an `R Script` you can write code and add comments. You can run each line by pressing `ctrl + enter/return`. 
@@ -84,7 +84,7 @@ After you run each line of the code, you can see the messages in your `Console`.
 ### R packages installation and loading 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_package.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_package.png")
 ```
 
 Note: To check what packages you already have, go to the `Packages` window on the bottom right. 
@@ -100,7 +100,7 @@ There are two ways to install packages.
 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_Install_pkg.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_Install_pkg.png")
 ```
 
 
@@ -119,7 +119,7 @@ Alternately, you can run `install.pakcages("")` with the package name inside `""
 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_tools.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_tools.png")
 ```
 
 Note: Customise your RStudio, go `Tools` `r icons::fontawesome("arrow-circle-right", style = "solid")` `Global Options..`
@@ -130,7 +130,7 @@ Note: Customise your RStudio, go `Tools` `r icons::fontawesome("arrow-circle-rig
 
 
 ```{r, echo=FALSE, out.width="50%"}
-knitr::include_graphics("chapter1-02/RStudio_mirror.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_mirror.png")
 ```
 
 
@@ -147,7 +147,7 @@ Note: If you are having difficulty downloading packages in your country, you cou
 
 
 ```{r, echo=FALSE}
-knitr::include_graphics("chapter1-02/RStudio_apprenve.png")
+knitr::include_graphics("chapter1/chapter1-02/RStudio_apprenve.png")
 ```
 
 Note: You can also change the appearance of your RStudio from the `Global Options...` `r icons::fontawesome("arrow-circle-right", style = "solid")` `Appearance`. 
